--- a/ProjectWindowsForm/ProjectWindowsForm/ProjectWindowsForm.csproj
+++ b/ProjectWindowsForm/ProjectWindowsForm/ProjectWindowsForm.csproj
@@ -46,14 +46,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="interfaceReembolso.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="interfaceReembolso.Designer.cs">
+      <DependentUpon>interfaceReembolso.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="interfaceReembolso.resx">
+      <DependentUpon>interfaceReembolso.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -62,6 +65,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -75,6 +79,27 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\logo_login.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\logo_login1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\logo_login2.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\logo_login3.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\logo_login4.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\logo_uniritter.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\logo_uniritter1.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
